--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Resume</title>
 </head>
 <body>
-    <header id="123" class="grid">
+    <header id="bbbb" class="grid">
         <div class="bg"></div>
         <div class="content-wrap">
         <div>
         <h1>123</h1>
         <p>研究生</p>
-        <a href="#">能力</a>
+        <a href="#service" class="btn">能力</a>
         </div>
         </div>>
     </header>
