--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
     </main>>
-    <footer>
+    <footer class="grid">
         <section>Resume</section>
         <section>Design by <a href="https://s124729427.github.io/work/" target="_blank">123</a>
             </section>
