--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header id="bbbb" class="grid">
-        <div class="bg"></div>
-        <div class="content-wrap">
-        <div>
+        <section class="bg"></section>
+        <section class="content-wrap">
+        <section>
         <h1>123</h1>
         <p>研究生</p>
         <a href="#service" class="btn">能力</a>
-        </div>
-        </div>>
+        </section>
+        </section>>
     </header>
     <main>
         <section id="skill" class="grid">
