--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,9 @@
         <section class="bg"></section>
         <section class="content-wrap">
         <section>
-        <h1>123</h1>
-        <p>研究生</p>
-        <a href="#service" class="btn">能力</a>
+        <h1>莊執中</h1>
+        <p>網路應用實驗室研究生</p>
+        <a href="#service" class="btn">專業技能</a>
         </section>
         </section>>
     </header>
@@ -40,50 +40,48 @@
                 <section class="card">
                         <img src="2.jpg" alt="網頁">
                         <section class="card-content">
-                            <h3>網頁設計</h3>
+                            <h3>硬體架構設計</h3>
                             <p>隨機文字</p>
                         </section>
-                    </section>
+                </section>
             </li>
             <li>
                 <section class="card">
                         <img src="3.jpg" alt="網頁">
                         <section class="card-content">
-                            <h3>網頁設計</h3>
+                            <h3>手機應用程式設計</h3>
                             <p>隨機文字</p>
                         </section>
-                    </section>
+                </section>
             </li>
-            </ul>>
+        </ul>
 
-        </section>
+    </section>
     <section id="promise" class="grid">
             <section class="content-wrap">
                 <h1>技能</h1>
                 <p>沒有技能</p>
             </section>
-        </section>
+    </section>
     <section id="contact" class="grid">
         <section class="box">
             <h2>聯繫我們</h2>
             <p>sdfsdfsdfsdfs</p>
-            <p><a href="s124729427@yahoo.com.tw">contact@mail.com</a></p>
+            <p><a href="mailto:s124729427@yahoo.com.tw">s124729427@yahoo.com.tw</a></p>
         </section>
         <section class="box">
-                <section class="box">
-                        <h2>聯繫我們</h2>
-                        <p>sdfsdfsdfsdfs</p>
-                </section>
-            </section>
-
+            <h2>關於我們</h2>
+            <p>sdfsdfsdfsdfs</p>
         </section>
+    </section>
+
+        
 
 
     </main>>
     <footer class="grid">
-        <section>Resume</section>
-        <section>Design by <a href="https://s124729427.github.io/work/" target="_blank">123</a>
-            </section>
+        <section>履歷</section>
+        <section>Design by <a href="https://s124729427.github.io/work/" target="_blank">123</a></section>
     </footer>
     
 </body>
