--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         
 
 
-    </main>>
+    </main>
     <footer class="grid">
         <section>履歷</section>
         <section>Design by <a href="https://s124729427.github.io/work/" target="_blank">123</a></section>
