--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>網路應用實驗室研究生</p>
         <a href="#service" class="btn">專業技能</a>
         </section>
-        </section>>
+        </section>
     </header>
     <main>
         <section id="skill" class="grid">
