--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
     </main>
     <footer class="grid">
-        <section>履歷</section>
-        <section>Design by <a href="https://s124729427.github.io/work/" target="_blank">123</a></section>
+        <div>履歷</div>
+        <div>Design by <a href="https://s124729427.github.io/work/" target="_blank">123</a></div>
     </footer>
     
 </body>
