--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         
                         故說波若波羅蜜多咒。即說咒曰。
                         
-                        揭諦揭諦。波羅揭諦。波羅僧揭諦。菩提薩婆訶</p>
+                        揭諦。波羅揭諦。波羅僧揭諦。菩提薩婆訶</p>
             </section>
         </section>
     <section id="service" class="grid">
