--- a/index.html
+++ b/index.html
@@ -72,14 +72,16 @@
     <section id="contact" class="grid">
         <section class="box">
             <h2>聯繫資訊</h2>
-            <p>國立台北科技大學網路應用實驗室 : 0227712171分機2265
-                手機號碼 : 0933041007
-            </p>
+            <p>國立台北科技大學網路應用實驗室 : 0227712171分機2265</p>
+            <p>手機號碼 : 0933041007</p>
             <p>電子信箱 : <a href="mailto:s124729427@yahoo.com.tw">s124729427@yahoo.com.tw</a></p>
         </section>
         <section class="box">
             <h2>作品連結</h2>
-            <p>實作作品皆儲存於雲端硬碟中，皆有說明文件可供參考，包含專題實作與課程作業，感謝您的蒞臨</p>
+            <p>實作作品皆儲存於雲端硬碟中</p>
+            <p>皆有說明文件可供參考</p>
+            <p>包含專題實作與課程作業</p>
+            <p>感謝您的蒞臨</p>            
             <p><a href="https://drive.google.com/open?id=1-qpWE5GfDdNEBx_OUri-ZQkmYZisE3Qf">Google Drive</a></p>
         </section>
     </section>
