--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
         <ul>
             <li>
                 <section class="card">
-                    <img src="1.jpg" alt="網頁">
+                    <img src="3.jpg" alt="網頁">
                     <section class="card-content">
-                        <h3>網頁與資料庫設計</h3>
+                        <h3>網頁與資料庫</h3>
                         <p>使用XAMPP建立網頁伺服器，其為容易安裝的Apache擴充版本，包含MySQL、PHP等軟體在內，搭配HTML/CSS製作符合使用者習慣的搜尋網站</p>
                     </section>
                 </section>
             </li>
             <li>
                 <section class="card">
-                        <img src="2.jpg" alt="網頁">
+                        <img src="1.jpg" alt="網頁">
                         <section class="card-content">
-                            <h3>硬體架構設計</h3>
+                            <h3>硬體架構</h3>
                             <p>基於Bluno NANO與壓力感測器設計出足底壓力感測裝置，可全範圍量測各區段足底壓力，量測數值藉由NANO內建藍牙晶片，傳輸至手機並顯示於APP介面</p>
                         </section>
                 </section>
             </li>
             <li>
                 <section class="card">
-                        <img src="3.jpg" alt="網頁">
+                        <img src="2.jpg" alt="網頁">
                         <section class="card-content">
-                            <h3>手機應用程式設計</h3>
+                            <h3>手機應用程式</h3>
                             <p></p>
                         </section>
                 </section>
@@ -64,8 +64,13 @@
     </section>
     <section id="promise" class="grid">
             <section class="content-wrap">
-                <h1>實作作品</h1>
-                <p></p>
+                <h1>實作作品介紹</h1>
+                <p>壓力地墊</p>
+                <p>台北科技大學周邊美食搜尋網頁</p>
+                <p>超速提醒APP</p>
+                <p>HTTP傳輸協定實作</p>
+                <p>JAVA多執行緒撰寫實作</p> 
+                <p>國際會議論文Application of Insole Pressure Sensor to Assess Lower Extremity Compliance</p> 
             </section>
     </section>
     <section id="contact" class="grid">
@@ -79,7 +84,7 @@
             <h2>作品連結</h2>
             <p>實作作品皆儲存於雲端硬碟中</p>
             <p>皆有說明文件可供參考</p>
-            <p>包含專題實作與課程作業</p>
+            <p>包含專題實作、課程作業與第一篇論文</p>
             <p>感謝您的蒞臨</p>            
             <p><a href="https://drive.google.com/open?id=1-qpWE5GfDdNEBx_OUri-ZQkmYZisE3Qf">Google Drive</a></p>
         </section>
