--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     <section id="promise" class="grid">
             <section class="content-wrap">
                 <h1>實作作品介紹</h1>
-                <p>壓力地墊</p>
-                <p>台北科技大學周邊美食搜尋網頁</p>
-                <p>超速提醒APP</p>
-                <p>HTTP傳輸協定實作</p>
-                <p>JAVA多執行緒撰寫實作</p> 
-                <p>國際會議論文Application of Insole Pressure Sensor to Assess Lower Extremity Compliance</p> 
+                <p>壓力地墊 : </p>
+                <p>台北科技大學周邊美食搜尋網頁 : </p>
+                <p>超速提醒APP : </p>
+                <p>HTTP傳輸協定實作 : </p>
+                <p>JAVA多執行緒撰寫實作 : </p> 
+                <p>國際會議論文Application of Insole Pressure Sensor to Assess Lower Extremity Compliance : </p> 
             </section>
     </section>
     <section id="contact" class="grid">
@@ -86,7 +86,7 @@
             <p>皆有說明文件可供參考</p>
             <p>包含專題實作、課程作業與第一篇論文</p>
             <p>感謝您的蒞臨</p>            
-            <p><a href="https://drive.google.com/open?id=1-qpWE5GfDdNEBx_OUri-ZQkmYZisE3Qf">Google Drive</a></p>
+            <p>連結 : <a href="https://drive.google.com/open?id=1-qpWE5GfDdNEBx_OUri-ZQkmYZisE3Qf">Google Drive</a></p>
         </section>
     </section>
 
