--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul>
             <li>
                 <section class="card">
-                    <img src="3.jpg" alt="網頁">
+                    <img src="2.jpg" alt="網頁">
                     <section class="card-content">
                         <h3>網頁與資料庫</h3>
                         <p>使用XAMPP建立網頁伺服器，其為容易安裝的Apache擴充版本，包含MySQL、PHP等軟體在內，搭配HTML/CSS製作符合使用者習慣的搜尋網站</p>
@@ -43,7 +43,7 @@
             </li>
             <li>
                 <section class="card">
-                        <img src="1.jpg" alt="網頁">
+                        <img src="3.jpg" alt="網頁">
                         <section class="card-content">
                             <h3>硬體架構</h3>
                             <p>基於Bluno NANO與壓力感測器設計出足底壓力感測裝置，可全範圍量測各區段足底壓力，量測數值藉由NANO內建藍牙晶片，傳輸至手機並顯示於APP介面</p>
@@ -52,7 +52,7 @@
             </li>
             <li>
                 <section class="card">
-                        <img src="2.jpg" alt="網頁">
+                        <img src="1.jpg" alt="網頁">
                         <section class="card-content">
                             <h3>手機應用程式</h3>
                             <p></p>
@@ -65,12 +65,12 @@
     <section id="promise" class="grid">
             <section class="content-wrap">
                 <h1>實作作品介紹</h1>
-                <p>壓力地墊 : </p>
-                <p>台北科技大學周邊美食搜尋網頁 : </p>
-                <p>超速提醒APP : </p>
-                <p>HTTP傳輸協定實作 : </p>
-                <p>JAVA多執行緒撰寫實作 : </p> 
-                <p>國際會議論文Application of Insole Pressure Sensor to Assess Lower Extremity Compliance : </p> 
+                <p>壓力地墊 : 搭配手機APP顯示，也可顯示溫度與濕度，讓使用者每天監控自身體重與BMI值，出門前掌握屋外溫溼度</p>
+                <p>台北科技大學周邊美食搜尋網頁 : 利用多層選項與範圍設定作搭配使用，可篩選出最符合使用者心中的最佳食物，查詢最喜愛店家販賣之商品清單，還可點選食物加入帳號最愛列表中</p>
+                <p>超速提醒APP : 藉由WIFI AP定位與GPS定位測定時速提醒駕駛人避免超速行駛，也可離線作使用</p>
+                <p>HTTP傳輸協定實作 : 利用Wireshark安裝置客戶端並連線至Server端之撥放影片網頁，觀察HTTP傳輸協定中遺失封包數，計算遺失率，並顯示在網頁中</p>
+                <p>JAVA多執行緒撰寫實作 : 使用JAVA提供的涵式撰寫使用多執行緒計算矩陣相乘與使用一般迴圈計算速度之相差倍數</p> 
+                <p>國際會議論文 Application of Insole Pressure Sensor to Assess Lower Extremity Compliance : 研究主題方向為利用柔希科技公司所製造的鞋墊式壓力感測器量測人體足底壓力，並使用Bluno NANO微處理器接收數據，在藉由內部藍牙晶片傳輸至手機APP顯示</p> 
             </section>
     </section>
     <section id="contact" class="grid">
