--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <img src="1.jpg" alt="網頁">
                         <section class="card-content">
                             <h3>手機應用程式</h3>
-                            <p></p>
+                            <p>使用Android提供之涵式庫，啟用手機之GPS定位功能，與搜尋WIFI AP位置加強定為準確率與速度，設定速度上限為一般道路平均60限速，超速時會產生震動與發出警告聲音通知使用者</p>
                         </section>
                 </section>
             </li>
