--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <section class="card">
                     <img src="2.jpg" alt="網頁">
                     <section class="card-content">
-                        <h3>網頁與資料庫</h3>
+                        <h3>網頁與資料庫設計</h3>
                         <p>使用XAMPP建立網頁伺服器，其為容易安裝的Apache擴充版本，包含MySQL、PHP等軟體在內，搭配HTML/CSS製作符合使用者習慣的搜尋網站</p>
                     </section>
                 </section>
@@ -45,7 +45,7 @@
                 <section class="card">
                         <img src="3.jpg" alt="網頁">
                         <section class="card-content">
-                            <h3>硬體架構</h3>
+                            <h3>硬體架構設計</h3>
                             <p>基於Bluno NANO與壓力感測器設計出足底壓力感測裝置，可全範圍量測各區段足底壓力，量測數值藉由NANO內建藍牙晶片，傳輸至手機並顯示於APP介面</p>
                         </section>
                 </section>
@@ -54,7 +54,7 @@
                 <section class="card">
                         <img src="1.jpg" alt="網頁">
                         <section class="card-content">
-                            <h3>手機應用程式</h3>
+                            <h3>手機應用程式設計</h3>
                             <p>使用Android提供之涵式庫，啟用手機之GPS定位功能，與搜尋WIFI AP位置加強定為準確率與速度，設定速度上限為一般道路平均60限速，超速時會產生震動與發出警告聲音通知使用者</p>
                         </section>
                 </section>
@@ -89,9 +89,8 @@
         <section class="box">
             <h2>作品連結</h2>
             <p>實作作品皆儲存於雲端硬碟中</p>
-            <p>皆有說明文件可供參考</p>
-            <p>包含專題實作、課程作業與第一篇論文</p>
-            <p>感謝您的蒞臨</p>            
+            <p>皆有更詳細的內容與說明文件可供參考</p>
+            <p>感謝您的蒞臨觀賞</p>            
             <p>連結 : <a href="https://drive.google.com/open?id=1-qpWE5GfDdNEBx_OUri-ZQkmYZisE3Qf">Google Drive</a></p>
         </section>
     </section>
