--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>舉辦活動:</p>
                 <p>2016年6月已得畢業學業學分，為考取研究所而延遲畢業一年</p>
                 <p>2017年9月進入國立台北科技大學電子系研究所就讀</p>
-                <p>2018年11月完成第一篇論文，已投稿至ICNS 2018國際會議，並確定已會議已接收並錄用文章</p>
+                <p>2018年11月完成第一篇論文，已投稿至ICNS 2018國際會議，並確定會議已接收並錄用文章</p>
             </section>
         </section>
     <section id="service" class="grid">
