--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>學經歷</h1>
                 <p>2012年9月進入淡江大學電機工程學系就讀</p>
                 <p>2013年5月加入淡江大學高雄校友會擔任社團總務總幹----社團總人數達七百多人</p>
-                <p>舉辦活動:</p>
+                <p>舉辦活動 : 迎新宿營、校慶、運動會、出遊、晚會等共11項活動，其中3項多達200人以上，5項超過百人</p>
                 <p>2016年6月已得畢業學業學分，為考取研究所而延遲畢業一年</p>
                 <p>2017年9月進入國立台北科技大學電子系研究所就讀</p>
                 <p>2018年11月完成第一篇論文，已投稿至ICNS 2018國際會議，並確定會議已接收並錄用文章</p>
