--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <title>Resume</title>
 </head>
 <body>
@@ -88,10 +92,10 @@
         </section>
         <section class="box">
             <h2>作品連結</h2>
-            <p>實作作品皆儲存於雲端硬碟中</p>
+            <p>實作作品皆儲存於Github中</p>
             <p>皆有更詳細的內容與說明文件可供參考</p>
             <p>感謝您的蒞臨觀賞</p>            
-            <p>連結 : <a href="https://drive.google.com/open?id=1-qpWE5GfDdNEBx_OUri-ZQkmYZisE3Qf">Google Drive</a></p>
+            <p>連結 : <a href="https://github.com/s124729427">Github</a></p>
         </section>
     </section>
 
